Fixed CSS bug that allowed #content to shift when window got to small.

--- a/system/pyrocms/assets/css/admin/style.css
+++ b/system/pyrocms/assets/css/admin/style.css
@@ -106,6 +106,7 @@ a:hover {
 	display: table-cell;
 	vertical-align: top;
 	font-size: 110%;
+	min-width: 223px;
 }
 #sidebar footer {
 	font-size: 11px;
